--- a/reference/codelists/measurement-units.csv-metadata.json
+++ b/reference/codelists/measurement-units.csv-metadata.json
@@ -5,9 +5,9 @@
             "@language": "en"
         }
     ],
-    "@id": "http://gss-data.org.uk/def/energy/concept-scheme/measurement-units",
+    "@id": "http://gss-data.org.uk/def/climate-change/concept-scheme/measurement-units",
     "prov:hadDerivation": {
-        "@id": "http://gss-data.org.uk/def/energy/concept-scheme/measurement-units",
+        "@id": "http://gss-data.org.uk/def/climate-change/concept-scheme/measurement-units",
         "@type": [
             "skos:ConceptScheme",
             "http://publishmydata.com/pmdcat#ConceptScheme"
@@ -50,7 +50,7 @@
                 "name": "parent",
                 "datatype": "string",
                 "propertyUrl": "skos:broader",
-                "valueUrl": "http://gss-data.org.uk/def/energy/concept/measurement-units/{+parent}"
+                "valueUrl": "http://gss-data.org.uk/def/climate-change/concept/measurement-units/{+parent}"
             },
             {
                 "titles": "Source",
@@ -77,36 +77,36 @@
                 "name": "in_scheme",
                 "virtual": true,
                 "propertyUrl": "skos:inScheme",
-                "valueUrl": "http://gss-data.org.uk/def/energy/concept-scheme/measurement-units"
+                "valueUrl": "http://gss-data.org.uk/def/climate-change/concept-scheme/measurement-units"
             }
         ],
         "primaryKey": [
             "path"
         ],
-        "aboutUrl": "http://gss-data.org.uk/def/energy/concept/measurement-units/{+path}"
+        "aboutUrl": "http://gss-data.org.uk/def/climate-change/concept/measurement-units/{+path}"
     },
-    "rdfs:label": "GSS EDVP measurement units",
-    "dc:title": "GSS EDVP measurement units",
+    "rdfs:label": "GSS BEIS measurement units",
+    "dc:title": "GSS BEIS measurement units",
     "rdfs:seeAlso": [
         {
-            "@id": "http://gss-data.org.uk/def/energy/concept-scheme/measurement-units/dataset",
+            "@id": "http://gss-data.org.uk/def/climate-change/concept-scheme/measurement-units/dataset",
             "@type": [
                 "dcat:Dataset",
                 "http://publishmydata.com/pmdcat#Dataset"
             ],
             "http://publishmydata.com/pmdcat#datasetContents": {
-                "@id": "http://gss-data.org.uk/def/energy/concept-scheme/measurement-units"
+                "@id": "http://gss-data.org.uk/def/climate-change/concept-scheme/measurement-units"
             },
             "http://publishmydata.com/pmdcat#graph": {
-                "@id": "http://gss-data.org.uk/def/energy/concept-scheme/measurement-units"
+                "@id": "http://gss-data.org.uk/def/climate-change/concept-scheme/measurement-units"
             },
             "dc:modified": {
                 "@type": "dateTime",
                 "@value": "2021-05-20T11:35:12.599937"
             },
-            "rdfs:label": "GSS EDVP measurement units",
-            "dc:title": "GSS EDVP measurement units",
-            "rdfs:comment": "Dataset representing the 'GSS EDVP measurement units' code list.",
+            "rdfs:label": "GSS BEIS measurement units",
+            "dc:title": "GSS BEIS measurement units",
+            "rdfs:comment": "Dataset representing the 'GSS BEIS measurement units' code list.",
             "dc:issued": {
                 "@type": "dateTime",
                 "@value": "2021-02-03T08:41:31.826544"
@@ -115,27 +115,27 @@
         {
             "@id": "http://gss-data.org.uk/catalog/vocabularies",
             "dcat:record": {
-                "@id": "http://gss-data.org.uk/def/energy/concept-scheme/measurement-units/catalog-record"
+                "@id": "http://gss-data.org.uk/def/climate-change/concept-scheme/measurement-units/catalog-record"
             }
         },
         {
-            "@id": "http://gss-data.org.uk/def/energy/concept-scheme/measurement-units/catalog-record",
+            "@id": "http://gss-data.org.uk/def/climate-change/concept-scheme/measurement-units/catalog-record",
             "@type": "dcat:CatalogRecord",
             "foaf:primaryTopic": {
-                "@id": "http://gss-data.org.uk/def/energy/concept-scheme/measurement-units/dataset"
+                "@id": "http://gss-data.org.uk/def/climate-change/concept-scheme/measurement-units/dataset"
             },
             "http://publishmydata.com/pmdcat#metadataGraph": {
-                "@id": "http://gss-data.org.uk/def/energy/concept-scheme/measurement-units"
+                "@id": "http://gss-data.org.uk/def/climate-change/concept-scheme/measurement-units"
             },
-            "dc:title": "GSS EDVP measurement units Catalog Record",
-            "rdfs:label": "GSS EDVP measurement units Catalog Record",
+            "dc:title": "GSS BEIS measurement units Catalog Record",
+            "rdfs:label": "GSS BEIS measurement units Catalog Record",
             "dc:issued": {
                 "@type": "dateTime",
-                "@value": "2021-02-03T08:41:31.826544"
+                "@value": "2021-07-03T08:41:31.826544"
             },
             "dc:modified": {
                 "@type": "dateTime",
-                "@value": "2021-02-03T08:41:31.826544"
+                "@value": "2021-07-03T08:41:31.826544"
             }
         }
     ]
